--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <p>這是一個Midjourney創作的藝術空間。</p>
     <div class="grid">
       <!-- HTML 程式碼 (以圖片為例) -->
-      <img src="https://github.com/Marscoly/Midjourney/blob/main/CAT.jpg.jpg">
-      <img src="https://github.com/Marscoly/Midjourney/blob/main/CAT-2.jpg.jpg">
-      <img src="https://github.com/Marscoly/Midjourney/blob/main/CAT-3.jpg.jpg">
-      <img src="https://github.com/Marscoly/Midjourney/blob/main/GIRL.jpg.jpg">
-      <img src="https://github.com/Marscoly/Midjourney/blob/main/GIRL-2.jpg.jpg">
-      <img src="https://github.com/Marscoly/Midjourney/blob/main/GIRL-3.jpg.jpg">
+      <img src="https://github.com/Marscoly/Midjourney/blob/main/CAT.jpg">
+      <img src="https://github.com/Marscoly/Midjourney/blob/main/CAT-2.jpg">
+      <img src="https://github.com/Marscoly/Midjourney/blob/main/CAT-3.jpg">
+      <img src="https://github.com/Marscoly/Midjourney/blob/main/GIRL.jpg">
+      <img src="https://github.com/Marscoly/Midjourney/blob/main/GIRL-2.jpg">
+      <img src="https://github.com/Marscoly/Midjourney/blob/main/GIRL-3.jpg">
     </div>
     <script>
       var images = document.getElementsByTagName("img");
