--- a/art/index.html
+++ b/art/index.html
@@ -23,12 +23,12 @@
     <p>這是一個Midjourney創作的藝術空間。</p>
     <div class="grid">
       <!-- HTML 程式碼 (以圖片為例) -->
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/images/CAT.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/images/CAT-2.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/images/CAT-3.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/images/GIRL.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/images/GIRL-2.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/images/GIRL-3.jpg">
+      <img src="./CAT.jpg">
+      <img src="./CAT-2.jpg">
+      <img src="./CAT-3.jpg">
+      <img src="./GIRL.jpg">
+      <img src="./GIRL-2.jpg">
+      <img src="./GIRL-3.jpg">
     </div>
     <script>
       var images = document.getElementsByTagName("img");
