--- a/art/index.html
+++ b/art/index.html
@@ -23,12 +23,12 @@
     <p>這是一個Midjourney創作的藝術空間。</p>
     <div class="grid">
       <!-- HTML 程式碼 (以圖片為例) -->
-      <img src="/images/CAT.jpg">
-      <img src="/images/CAT-2.jpg">
-      <img src="/images/CAT-3.jpg">
-      <img src="/images/GIRL.jpg">
-      <img src="/images/GIRL-2.jpg">
-      <img src="/images/GIRL-3.jpg">
+      <img src="/art/images/CAT.jpg">
+      <img src="/art/images/CAT-2.jpg">
+      <img src="/art/images/CAT-3.jpg">
+      <img src="/art/images/GIRL.jpg">
+      <img src="/art/images/GIRL-2.jpg">
+      <img src="/art/images/GIRL-3.jpg">
     </div>
     <script>
       var images = document.getElementsByTagName("img");
