--- a/art/index.html
+++ b/art/index.html
@@ -23,7 +23,7 @@
     <p>這是一個Midjourney創作的藝術空間。</p>
     <div class="grid">
       <!-- HTML 程式碼 (以圖片為例) -->
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/CAT.jpg">
+      <img src="images/CAT.jpg">
       <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/CAT-2.jpg">
       <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/CAT-3.jpg">
       <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/GIRL.jpg">
