--- a/art/index.html
+++ b/art/index.html
@@ -24,11 +24,11 @@
     <div class="grid">
       <!-- HTML 程式碼 (以圖片為例) -->
       <img src="images/CAT.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/CAT-2.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/CAT-3.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/GIRL.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/GIRL-2.jpg">
-      <img src="https://github.com/Marscoly/cuteandbeauty.github.io/tree/main/art/images/GIRL-3.jpg">
+      <img src="images/CAT-2.jpg">
+      <img src="images/CAT-3.jpg">
+      <img src="images/GIRL.jpg">
+      <img src="images/GIRL-2.jpg">
+      <img src="images/GIRL-3.jpg">
     </div>
     <script>
       var images = document.getElementsByTagName("img");
