--- a/art/index.html
+++ b/art/index.html
@@ -6,7 +6,7 @@
     <style>
       /* 設定網頁背景圖片 */
       body {
-        background-image: url("images/background.jpg");
+        background-image: url("images/backgroung.jpg");
         background-size: cover;
       }
       
