--- a/art/index.html
+++ b/art/index.html
@@ -13,7 +13,19 @@
       h1 {
         text-align: center;
       }
-      
+      <style>
+    body {
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        color: #333;
+    }
+    h1 {
+        font-family: Georgia, serif;
+        font-size: 36px;
+        font-weight: bold;
+        color: lightyellow;
+    }
+</style>      
       .grid {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
