--- a/art/index.html
+++ b/art/index.html
@@ -4,34 +4,40 @@
     <meta charset="UTF-8">
     <title>網頁標題</title>
     <style>
-  /* 設定網頁背景圖片 */
-  body {
-    background-image: url("images/backgroung.jpg");
-    background-size: cover;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    color: #333;
-  }
+      /* 設定網頁背景圖片 */
+      body {
+        background-image: url("images/backgroung.jpg");
+        background-size: cover;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        color: #333;
+      }
 
-  h1 {
-    font-family: Georgia, serif;
-    font-size: 36px;
-    font-weight: bold;
-    text-align: center;
-    color: lightyellow;
-  }
+      h1 {
+        font-family: Georgia, serif;
+        font-size: 36px;
+        font-weight: bold;
+        text-align: center;
+        color: lightyellow;
+      }
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 10px;
-  }
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-gap: 10px;
+      }
 
-  img {
-    max-width: 100%;
-    border: 1px solid #ccc;
-  }
-</style>
+      img {
+        max-width: 100%;
+        border: 1px solid #ccc;
+      }
+
+      img:hover {
+        transform: scale(1.5);
+        z-index: 1;
+        position: relative;
+      }
+    </style>
   </head>
   <body>
     <h1>喵星人與水瓶女</h1>
@@ -45,16 +51,5 @@
       <img src="images/GIRL-2.jpg">
       <img src="images/GIRL-3.jpg">
     </div>
-    <script>
-      var images = document.getElementsByTagName("img");
-      for (var i = 0; i < images.length; i++) {
-        images[i].addEventListener("mouseover", function() {
-          this.style.transform = "scale(1.5)";
-        });
-        images[i].addEventListener("mouseout", function() {
-          this.style.transform = "scale(1)";
-        });
-      }
-    </script>
   </body>
 </html>
