--- a/art/index.html
+++ b/art/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>網頁標題</title>
+    <title>Cats&Ladies</title>
     <style>
       /* 設定網頁背景圖片 */
       body {
         background-image: url("images/backgroung.jpg");
         background-size: cover;
         font-family: Arial, sans-serif;
-        font-size: 16px;
-        color: #333;
+        font-size: 20px;
+        color: #FFA500;
       }
       
       h1 {
