--- a/art/index.html
+++ b/art/index.html
@@ -5,9 +5,10 @@
     <title>Cats&Ladies</title>
     <style>
       /* 設定網頁背景圖片 */
-      body {
-        background-image: url("images/backgroung.jpg");
-        background-size: cover;
+     body {
+  background-image: url("images/backgroung.jpg");
+  background-size: contain;
+  background-position: center;
         font-family: Arial, sans-serif;
         font-size: 20px;
         color: #FFA500;
