--- a/art/index.html
+++ b/art/index.html
@@ -7,7 +7,7 @@
       /* 設定網頁背景圖片 */
      body {
   background-image: url("images/backgroung-3.jpg");
-  background-size: contain;
+  background-size: cover;
   background-position: center;
         font-family: Arial, sans-serif;
         font-size: 20px;
