--- a/art/index.html
+++ b/art/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cats&Ladies</title>
+    <title>Cats & Ladies</title>
     <style>
       /* 設定網頁背景圖片 */
       body {
@@ -22,64 +22,50 @@
         color: lightyellow;
       }
       
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        grid-gap: 20px;
-        justify-content: center;
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      @media screen and (min-width: 768px) {
-        .grid {
-          grid-template-columns: repeat(3, 1fr);
-        }
-      }
-      
-      img {
-        max-width: 100%;
-        border: 1px solid #ccc;
-        transition: all 0.3s ease-in-out;
-      }
-
-      .zoom {
-        z-index: 999;
-        position: relative;
-        transform: scale(1.5);
-      }
-
-      /* 新增的 CSS */
       .gallery-wrapper {
+        width: 100%;
         max-width: 800px;
         margin: 0 auto;
       }
 
       .gallery-row {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: space-between;
         margin-bottom: 20px;
       }
 
       .gallery-row img {
-        max-width: 100%;
+        width: calc(33.33% - 10px);
         border: 1px solid #ccc;
         transition: all 0.3s ease-in-out;
       }
 
-      .gallery-row img:hover {
-        z-index: 999;
-        position: relative;
+      .zoom {
         transform: scale(1.5);
+      }
+
+      ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+      }
+
+      ::-webkit-scrollbar-track {
+        background-color: #F5F5F5;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+        border-radius: 5px;
+      }
+
+      ::-webkit-scrollbar-thumb:hover {
+        background-color: #aaa;
       }
     </style>
   </head>
   <body>
-    <h1>喵星人與水瓶女</h1>
-    <p>這是一個Midjourney創作的藝術空間。</p>
-
-    <!-- 修改後的 HTML 程式碼 -->
+    <h1>Cats & Ladies</h1>
+    <p>這是一個 Midjourney 創作的藝術空間。</p>
     <div class="gallery">
       <div class="gallery-wrapper">
         <div class="gallery-row">
@@ -93,11 +79,10 @@
           <img src="images/GIRL-4.jpg">
           <img src="images/GIRL-3.jpg">
           <img src="images/GIRL-5.jpg">
-          <img src="images/GIRL-6.jpg">
+          <img src="images/GIRL-5.jpg">
         </div>
       </div>
     </div>
-
     <script>
       var images = document.getElementsByTagName("img");
       for (var i = 0; i < images.length; i++) {
