--- a/art/index.html
+++ b/art/index.html
@@ -26,12 +26,14 @@
         width: 100%;
         max-width: 800px;
         margin: 0 auto;
+        overflow-x: auto;
       }
 
       .gallery-row {
         display: flex;
         justify-content: space-between;
         margin-bottom: 20px;
+        white-space: nowrap;
       }
 
       .gallery-row img {
