--- a/art/index.html
+++ b/art/index.html
@@ -26,38 +26,34 @@
         width: 100%;
         max-width: 800px;
         margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        overflow-x: auto;
+        scrollbar-width: none;
       }
 
-      .gallery-row + .gallery-row {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+      .gallery-row {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        width: 100%;
+        padding-right: 20px;
+        box-sizing: border-box;
+      }
+
       .gallery-row img {
         width: calc(33.33% - 10px);
         border: 1px solid #ccc;
         transition: all 0.3s ease-in-out;
-      }
-
-      .gallery-scroll {
-        overflow-x: auto;
         margin-bottom: 20px;
-      }
-
-      .gallery-scroll::-webkit-scrollbar {
-        height: 10px;
-      }
-
-      .gallery-scroll::-webkit-scrollbar-thumb {
-        background-color: #ccc;
-        border-radius: 5px;
-      }
-
-      .gallery-scroll::-webkit-scrollbar-thumb:hover {
-        background-color: #aaa;
       }
 
       .zoom {
         transform: scale(1.5);
+      }
+
+      ::-webkit-scrollbar {
+        width: 0;
       }
     </style>
   </head>
@@ -66,22 +62,18 @@
     <p>這是一個 Midjourney 創作的藝術空間。</p>
     <div class="gallery">
       <div class="gallery-wrapper">
-        <div class="gallery-scroll">
-          <div class="gallery-row">
-            <img src="images/CAT.jpg">
-            <img src="images/CAT-2.jpg">
-            <img src="images/CAT-3.jpg">
-          </div>
+        <div class="gallery-row">
+          <img src="images/CAT.jpg">
+          <img src="images/CAT-2.jpg">
+          <img src="images/CAT-3.jpg">
         </div>
-        <div class="gallery-scroll">
-          <div class="gallery-row">
-            <img src="images/GIRL.jpg">
-            <img src="images/GIRL-2.jpg">
-            <img src="images/GIRL-4.jpg">
-            <img src="images/GIRL-3.jpg">
-            <img src="images/GIRL-5.jpg">
-            <img src="images/GIRL-6.jpg">
-          </div>
+        <div class="gallery-row">
+          <img src="images/GIRL.jpg">
+          <img src="images/GIRL-2.jpg">
+          <img src="images/GIRL-4.jpg">
+          <img src="images/GIRL-3.jpg">
+          <img src="images/GIRL-5.jpg">
+          <img src="images/GIRL-6.jpg">
         </div>
       </div>
     </div>
