--- a/art/index.html
+++ b/art/index.html
@@ -28,8 +28,7 @@
         margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
-        overflow-x: auto;
-        scrollbar-width: none;
+        overflow-y: hidden;
       }
 
       .gallery-row {
@@ -39,6 +38,12 @@
         width: 100%;
         padding-right: 20px;
         box-sizing: border-box;
+        overflow-x: scroll;
+        scrollbar-width: none;
+      }
+
+      .gallery-row:first-child {
+        margin-bottom: 0;
       }
 
       .gallery-row img {
@@ -53,7 +58,7 @@
       }
 
       ::-webkit-scrollbar {
-        width: 0;
+        display: none;
       }
     </style>
   </head>
