--- a/art/index.html
+++ b/art/index.html
@@ -33,15 +33,10 @@
         scrollbar-width: none;
       }
 
-      .gallery-row {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 20px;
-        width: 100%;
-        padding-right: 20px;
-        box-sizing: border-box;
-      }
-
+      .gallery-row + .gallery-row {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
       .gallery-row:nth-child(2) {
         margin-bottom: 0px;
       }
