--- a/art/index.html
+++ b/art/index.html
@@ -77,11 +77,13 @@
           <img src="images/GIRL.jpg">
           <img src="images/GIRL-2.jpg">
           <img src="images/GIRL-4.jpg">
+          <img src="images/GIRL-4.jpg">
         </div>
         <div class="gallery-row">
           <img src="images/GIRL-3.jpg">
           <img src="images/GIRL-5.jpg">
           <img src="images/GIRL-6.jpg">
+          <img src="images/GIRL-4.jpg">
         </div>
       </div>
     </div>
