--- a/art/index.html
+++ b/art/index.html
@@ -27,8 +27,8 @@
         max-width: 800px;
         margin: 0 auto;
         display: flex;
-        flex-wrap: wrap;
-        overflow-x: scroll; /* 修改成 scroll */
+        flex-wrap: nowrap; /* 修改成 nowrap，讓每行圖片不換行 */
+        overflow-x: auto; /* 修改成 auto，讓有需要才出現滾動條 */
         overflow-y: hidden; /* 刪除 y 方向的滾動條 */
         scrollbar-width: none;
       }
