--- a/art/index.html
+++ b/art/index.html
@@ -101,7 +101,37 @@
       ::-webkit-scrollbar {
         width: 0;
       }
-    </style>
+/* Add a wrapper around each row of images */
+.gallery-row {
+  position: relative;
+}
+
+/* Style the previous and next buttons */
+.gallery-row button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+/* Style the previous button */
+.gallery-row .prev {
+  left: 0;
+}
+
+/* Style the next button */
+.gallery-row .next {
+  right: 0;
+}
+   </style>
   </head>
   <body>
     <h1>Cats & Ladies</h1>
