--- a/art/index.html
+++ b/art/index.html
@@ -64,7 +64,7 @@
       }
 
       .scroll-btn {
-        position: absolute;
+        position: relative;
         top: 50%;
         transform: translateY(-50%);
         width: 50px;
