--- a/art/index.html
+++ b/art/index.html
@@ -59,12 +59,12 @@
       }
 
       .scroll-btn-wrapper {
-        position: fixed;
+        position: relative;
         width: 100%;
       }
 
       .scroll-btn {
-        position: fixed;
+        position: relative;
         top: 50%;
         transform: translateY(-50%);
         width: 50px;
