--- a/art/index.html
+++ b/art/index.html
@@ -59,8 +59,9 @@
       }
 
       .scroll-btn-wrapper {
-        position: absolute;
+        position: fixed;
         width: 100%;
+        z-index: 2; /* 設定較高的 z-index */
       }
 
       .scroll-btn {
