--- a/art/index.html
+++ b/art/index.html
@@ -66,7 +66,8 @@
 
 .gallery-row .scroll-btn.disabled {
   opacity: 0.3;
-  cursor: not-allowed;
+  cursor: pointer;
+  pointer-events: auto;
 }
 
 /* 修改 img 的 margin-left 和 margin-right */
