--- a/art/index.html
+++ b/art/index.html
@@ -117,12 +117,14 @@
     <div class="gallery">
       <div class="gallery-wrapper">
         <div class="gallery-row">
+          <button class="scroll-btn left"></button>
           <img src="images/CAT.jpg">
           <img src="images/CAT-2.jpg">
           <img src="images/CAT-3.jpg">
           <button class="scroll-btn right"></button>
         </div>
         <div class="gallery-row">
+          <button class="scroll-btn left"></button>
           <img src="images/GIRL.jpg">
           <img src="images/GIRL-2.jpg">
           <img src="images/GIRL-4.jpg">
@@ -130,6 +132,7 @@
           <button class="scroll-btn right"></button>
         </div>
         <div class="gallery-row">
+          <button class="scroll-btn left"></button>
           <img src="images/GIRL-3.jpg">
           <img src="images/GIRL-5.jpg">
           <img src="images/GIRL-6.jpg">
