--- a/art/index.html
+++ b/art/index.html
@@ -152,21 +152,19 @@
         });
       }
  // 獲取元素
-const galleryRow = document.querySelector('.gallery-row');
-const leftBtn = galleryRow.querySelector('.scroll-btn.left');
-const rightBtn = galleryRow.querySelector('.scroll-btn.right');
-
+var leftBtn = gallery-row.getElementsByTagName("btn.left");
+var rightBtn = gallery-row.getElementsByTagName("btn.right");;
 // 設置按鈕點擊事件
 leftBtn.addEventListener('click', () => {
-  galleryRow.scrollBy({
-    left: -galleryRow.offsetWidth,
+  gallery-row.scrollBy({
+    left: -gallery-row.offsetWidth,
     behavior: 'smooth'
   });
 });
 
 rightBtn.addEventListener('click', () => {
-  galleryRow.scrollBy({
-    left: galleryRow.offsetWidth,
+  gallery-row.scrollBy({
+    left: gallery-row.offsetWidth,
     behavior: 'smooth'
   });
 });
