--- a/art/index.html
+++ b/art/index.html
@@ -152,8 +152,8 @@
         });
       }
  // 獲取元素
-var leftBtn = document.querySelector(".left");
-var rightBtn = document.querySelector(".right");
+var leftBtn = document.querySelector("scroll-btn.left");
+var rightBtn = document.querySelector("scroll-btn.right");
 var galleryRow = document.querySelector(".gallery-row");
 
 // 設置按鈕點擊事件
