--- a/art/index.html
+++ b/art/index.html
@@ -154,7 +154,7 @@
  // 獲取元素
 var leftBtn = document.querySelector(".left");
 var rightBtn = document.querySelector(".right");
-var galleryRow = document.querySelector(".gallery");
+var galleryRow = document.querySelector(".gallery-");
 
 // 設置按鈕點擊事件
 leftBtn.addEventListener('click', () => {
