--- a/art/index.html
+++ b/art/index.html
@@ -152,9 +152,9 @@
         });
       }
  // 獲取元素
-var leftBtn = document.querySelector(".left");
-var rightBtn = document.querySelector(".right");
-var galleryRow = document.querySelector(".gallery-");
+var leftBtn = document.getElementsByTagName("left");
+var rightBtn = document.getElementsByTagName("right");
+var galleryRow = document.querySelector(".gallery-row");
 
 // 設置按鈕點擊事件
 leftBtn.addEventListener('click', () => {
