--- a/art/index.html
+++ b/art/index.html
@@ -35,7 +35,7 @@
 }
 
 .gallery-row .scroll-btn {
-  position: relative;
+  position: static;
   top: 50%;
   transform: translateY(-50%);
   width: 50px;
