--- a/art/index.html
+++ b/art/index.html
@@ -35,7 +35,7 @@
 }
 
 .gallery-row .scroll-btn {
-  position: fixed;
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 50px;
@@ -53,13 +53,13 @@
 }
 
 .gallery-row .scroll-btn.left {
-  left: 100px;
+  left: 0;
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronLeftCircle-512.png");
   background-size: cover;
 }
 
 .gallery-row .scroll-btn.right {
-  right: 100px;
+  right: 0;
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronRightCircle-512.png");
   background-size: cover;
 }
