--- a/art/index.html
+++ b/art/index.html
@@ -35,11 +35,12 @@
 }
 
 .gallery-row .scroll-btn {
-  position: fixed;
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
+  background-color: rgba(0,0,0,0.3);
   border: none;
   outline: none;
   cursor: pointer;
@@ -47,19 +48,22 @@
   z-index: 1;
 }
 
+.gallery-row .scroll-btn:hover {
+  background-color: rgba(0,0,0,0.5);
+}
+
 .gallery-row .scroll-btn.left {
   left: 0;
-  margin-left: 16px; /* 新增 */
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronLeftCircle-512.png");
   background-size: cover;
 }
 
 .gallery-row .scroll-btn.right {
   right: 0;
-  margin-right: 16px; /* 新增 */
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronRightCircle-512.png");
   background-size: cover;
 }
+
 .gallery-row .scroll-btn.disabled {
   opacity: 0.3;
   cursor: pointer;
