--- a/art/index.html
+++ b/art/index.html
@@ -53,13 +53,15 @@
 }
 
 .gallery-row .scroll-btn.left {
-  left: 0;
+  left: 5px;
+  right: auto;
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronLeftCircle-512.png");
   background-size: cover;
 }
 
 .gallery-row .scroll-btn.right {
-  right: 0;
+  right: 5px;
+  left: auto;
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronRightCircle-512.png");
   background-size: cover;
 }
