--- a/art/index.html
+++ b/art/index.html
@@ -32,6 +32,7 @@
       }
       .gallery-row {
   position: relative; /* 新增 */
+  --scroll-btn-offset: 20px; /* 定義按鈕的寬度 */
 }
 
 .gallery-row .scroll-btn {
@@ -54,12 +55,14 @@
 
 .gallery-row .scroll-btn.left {
   left: 0;
+  transform: translateX(calc(-100% + var(--scroll-btn-offset)));
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronLeftCircle-512.png");
   background-size: cover;
 }
 
 .gallery-row .scroll-btn.right {
   right: 0;
+  transform: translateX(calc(100% - var(--scroll-btn-offset)));
   background-image: url("https://cdn3.iconfinder.com/data/icons/arrow-circle-1-1/64/ChevronRightCircle-512.png");
   background-size: cover;
 }
@@ -151,56 +154,64 @@
           this.classList.remove("zoom");
         });
       }
-// 獲取所有滾動按鈕
+ // 獲取所有滾動按鈕
 var scrollButtons = document.querySelectorAll(".scroll-btn");
 
 // 綁定每個按鈕的點擊事件
 scrollButtons.forEach(function(button) {
-  button.addEventListener("click", function() {
-    // 獲取該按鈕所在的行
-    var row = this.parentNode;
+button.addEventListener("click", function() {
+// 獲取該按鈕所在的行
+var row = this.parentNode;
+  // 獲取行內的所有圖片
+var images = row.querySelectorAll("img");
 
-    // 獲取行內的所有圖片
-    var images = row.querySelectorAll("img");
+// 獲取每個圖片的寬度和 margin-right 值
+var imageWidth = images[0].offsetWidth + parseInt(getComputedStyle(images[0]).marginRight);
 
-    // 獲取每個圖片的寬度和 margin-right 值
-    var imageWidth = images[0].offsetWidth + parseInt(getComputedStyle(images[0]).marginRight);
+// 獲取當前滾動條的位置
+var scrollPosition = row.scrollLeft;
 
-    // 獲取當前滾動條的位置
-    var scrollPosition = row.scrollLeft;
+// 計算每次滾動的距離（一次滾動一張圖片的距離）
+var scrollDistance = imageWidth;
 
-    // 計算每次滾動的距離（一次滾動一張圖片的距離）
-    var scrollDistance = imageWidth;
+// 根據按鈕的不同類型計算出不同的滾動方向和距離
+if (this.classList.contains("left")) {
+  // 向左滾動
+  scrollDistance = -scrollDistance;
+} else {
+  // 向右滾動
+  scrollDistance = scrollDistance;
+}
 
-    // 根據按鈕的不同類型計算出不同的滾動方向和距離
-    if (this.classList.contains("left")) {
-      // 向左滾動
-      scrollDistance = -scrollDistance;
-    } else {
-      // 向右滾動
-      scrollDistance = scrollDistance;
-    }
+// 計算滾動後的位置
+var newScrollPosition = scrollPosition + scrollDistance;
 
-    // 計算滾動後的位置
-    var newScrollPosition = scrollPosition + scrollDistance;
-
-    // 如果已經滾動到了最左邊或最右邊，則禁用相應的按鈕
-    var scrollLeft = 0;
-    var scrollRight = row.scrollWidth - row.clientWidth;
-    if (newScrollPosition <= scrollLeft) {
-      row.scrollLeft = scrollLeft;
-      this.classList.add("disabled");
-    } else if (newScrollPosition >= scrollRight) {
-      row.scrollLeft = scrollRight;
-      this.classList.add("disabled");
-    } else {
-      row.scrollLeft = newScrollPosition;
-      // 否則啟用所有按鈕
-      scrollButtons.forEach(function(button) {
-        button.classList.remove("disabled");
-      });
-    }
+// 如果已經滾動到了最左邊或最右邊，則禁用相應的按鈕
+var scrollLeft = 0;
+var scrollRight = row.scrollWidth - row.clientWidth;
+if (newScrollPosition <= scrollLeft) {
+  row.scrollTo({
+    left: scrollLeft,
+    behavior: "smooth"
   });
+  this.classList.add("disabled");
+} else if (newScrollPosition >= scrollRight) {
+  row.scrollTo({
+    left: scrollRight,
+    behavior: "smooth"
+  });
+  this.classList.add("disabled");
+} else {
+  row.scrollTo({
+    left: newScrollPosition,
+    behavior: "smooth"
+  });
+  // 否則啟用所有按鈕
+  scrollButtons.forEach(function(button) {
+    button.classList.remove("disabled");
+  });
+}
+});
 });
     </script>
   </body>
