--- a/art/index.html
+++ b/art/index.html
@@ -151,7 +151,12 @@
           this.classList.remove("zoom");
         });
       }
- scrollButtons.forEach(function(button) {
+      // 獲取所有滾動按鈕
+var scrollButtons = document.querySelectorAll(".scroll-btn");
+// 綁定每個按鈕的點擊事件
+scrollButtons.forEach(function(button) {
+button.addEventListener("click", function() { 
+      scrollButtons.forEach(function(button) {
   button.addEventListener("click", function() {
     // 獲取該按鈕所在的行
     var row = this.parentNode;
